src/Test/ElementServices/FeatureTests/TestData/bvt/parser/Errors/Error_DuplicateXKeys.xaml
<Page xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
<DockPanel
 xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"> 
        <DockPanel.Resources>
                <Style x:Key="" TargetType="{x:Type Button}">
                </Style>
                <Style x:Key="Style1" TargetType="{x:Type Button}">
                </Style>
                <Style x:Key="Style1" TargetType="{x:Type Button}">
                </Style>
                <Style x:Key="Style2" TargetType="{x:Type Button}">
                </Style>
        </DockPanel.Resources>

        <Button Style="{DynamicResource Style2}" />
</DockPanel>



</Page>
